Modify login screen and loading screen

--- a/ui/src/assets/templates/setup.html
+++ b/ui/src/assets/templates/setup.html
@@ -16,7 +16,7 @@
   ~
   -->
 
-<div class="md-padding logo-production" layout-xs="column" layout="row" layout-align="center center"
+<div class="md-padding full-background" layout-xs="column" layout="row" layout-align="center center"
      style="min-height:100vh !important;" ng-controller="SetupCtrl as ctrl">
     <div flex="60" layout-align="center center">
         <!--<div layout="column" flex="60" layout-align="center center" style="position:relative;top:-25px;margin-left:auto;margin-right:auto;">-->
@@ -25,7 +25,7 @@
         <!--alt="icon" src="assets/img/login/logo.png">-->
         <!--</div>-->
         <!--</div>-->
-        <md-card class="card-100-center" style="padding:20px;overflow-y:auto;height:80vh;">
+        <md-card class="card-100-center box-shadow-login" style="padding:20px;overflow-y:auto;height:80vh;">
             <div layout="column" flex="60" layout-align="center center" style="margin-left:auto;margin-right:auto;margin-bottom:20px;">
                 <div flex="60" layout-align="center center" layout="row"
                      style="color:white;"><img
