--- a/ui/src/assets/templates/login.html
+++ b/ui/src/assets/templates/login.html
@@ -16,11 +16,11 @@
   ~
   -->
 
-<div class="md-padding logo-production sp-fade" layout-xs="column" layout="row" layout-align="center center"
+<div class="md-padding full-background sp-fade" layout-xs="column" layout="row" layout-align="center center"
      style="min-height:100vh !important;" ng-controller="LoginCtrl as ctrl">
     <div flex="40" layout-align="center center">
 
-        <md-card class="card-100-center" style="padding:20px;position:relative;top:-25px;">
+        <md-card class="card-100-center box-shadow-login" style="padding:20px;position:relative;top:-25px;">
             <div layout="column" flex="60" layout-align="center center" style="margin-left:auto;margin-right:auto;">
                 <div flex="60" layout-align="center center" layout="row"
                      style="color:white;"><img
