--- a/ui/src/scss/main.scss
+++ b/ui/src/scss/main.scss
@@ -20,6 +20,7 @@
 
 @import '~angular-tree-component/dist/angular-tree-component.css';
 @import '~angular-material/angular-material.scss';
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
 @import '~bootstrap/dist/css/bootstrap.css';
 @import '~trix/dist/trix.css';
 @import '~slick-carousel/slick/slick-theme.css';
@@ -41,6 +42,7 @@
 @import './sp/shepherd-new';
 
 @import './sp/main';
+@import './sp/loading-bar';
 @import './sp/buttons';
 @import './sp/buttons.ng1';
 @import './sp/spinner';
