--- a/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
@@ -20,8 +20,9 @@
     <div class="title-panel" *ngIf="hasTitlePanelSettings">
         {{selectedTitle}}
     </div>
-    <div class="numberItem">
-        <div *ngIf="isNumber(item)">{{item}}</div>
-        <div *ngIf="!isNumber(item)">{{item}}</div>
-    </div>
+
+
+    <!--<sp-data-explorer></sp-data-explorer>-->
+    <sp-explorer></sp-explorer>
+
 </div>
