Moved old components into new module

--- a/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
@@ -23,6 +23,6 @@
 
 
     <!--<sp-data-explorer></sp-data-explorer>-->
-    <sp-explorer></sp-explorer>
+    <sp-old-explorer></sp-old-explorer>
 
 </div>
