--- a/ui/src/app/configuration/edge-configuration/edge-configuration.component.html
+++ b/ui/src/app/configuration/edge-configuration/edge-configuration.component.html
@@ -7,10 +7,25 @@
             </div>
         </div>
         <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="sp-blue-border page-container-padding-inner">
-            <div *ngFor="let node of availableEdgeNodes">
-                <h3>{{node.nodeId}}</h3>
-                <h4>{{node.nodeDescription}}</h4>
-            </div>
+            <mat-grid-list cols="3" rowHeight="100px">
+                <mat-grid-tile
+                        *ngFor="let node of availableEdgeNodes"
+                        [colspan]="1"
+                        [rowspan]="1">
+                    <mat-card class="example-card">
+                        <mat-card-header>
+                            <mat-card-title>{{node.nodeMetadata.nodeName}}</mat-card-title>
+                            <mat-card-subtitle>{{node.nodeMetadata.nodeDescription}}</mat-card-subtitle>
+                        </mat-card-header>
+                        <mat-card-content>
+                            <h3>{{node.nodeId}}</h3>
+                        </mat-card-content>
+                        <mat-card-actions>
+                            <button mat-button>Edit</button>
+                        </mat-card-actions>
+                    </mat-card>
+                </mat-grid-tile>
+            </mat-grid-list>
         </div>
     </div>
 </div>
