--- a/ui/src/app/core-ui/imageLabeler/imageLabeler.component.html
+++ b/ui/src/app/core-ui/imageLabeler/imageLabeler.component.html
@@ -65,15 +65,13 @@
         <div fxLayout="column" fxLayoutAlign="space-between center">
             <h2>Annotations</h2>
 
-
-
             <mat-list>
-                <mat-list-item *ngFor="let annotation of coco?.annotations" (mouseover)="enterAnnotation(annotation)" (mouseout)="leaveAnnotation(annotation)"
+                <mat-list-item *ngFor="let annotation of getAnnotations()" (mouseover)="enterAnnotation(annotation)" (mouseout)="leaveAnnotation(annotation)"
                                style="height: 30px; padding-top: 5px; padding-buttom: 5px; border-radius: 50px; margin-bottom: 5px"
                                [style.background-color]="annotation.isHovered || annotation.isSelected ? 'lightgrey' : 'white'">
-                    <mat-icon matListIcon [style.color]="getColor(coco.getLabelById(annotation.category_id))" style="margin-top: -8px;">color_lens</mat-icon>
+                    <mat-icon matListIcon [style.color]="getColor(getLabelById(annotation.category_id))" style="margin-top: -8px;">color_lens</mat-icon>
                     <mat-form-field>
-                        <mat-select [value]="coco.getLabelById(annotation.category_id)">
+                        <mat-select [value]="getLabelById(annotation.category_id)">
                             <mat-optgroup *ngFor="let labelCategor of labelCategories" [label]="labelCategor">
                                 <mat-option *ngFor="let label of labels[labelCategor]" [value]="label" (click)="changeLabel(annotation, label, labelCategory)">
                                     {{label}}
