Add deployment settings to start pipeline dialog

--- a/ui/src/app/configuration/configuration.component.html
+++ b/ui/src/app/configuration/configuration.component.html
@@ -33,7 +33,7 @@
     <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 1">
         <messaging-configuration fxFlex="100"></messaging-configuration>
     </div>
-    <div class="fixed-height page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 2">
+    <div class="page-container-padding-inner" fxLayout="column" fxFlex="100" *ngIf="selectedIndex == 2">
         <edge-configuration fxFlex="100"></edge-configuration>
     </div>
 </div>
