--- a/ui/src/app/configuration/edge-configuration/edge-configuration.component.css
+++ b/ui/src/app/configuration/edge-configuration/edge-configuration.component.css
@@ -5,3 +5,12 @@
 .form-width {
     width:80%;
 }
+
+.example-card {
+    max-width: 400px;
+}
+
+mat-card {
+    box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
+    margin: 10px;
+}
