--- a/ui/src/app/configuration/edge-configuration/edge-configuration.component.html
+++ b/ui/src/app/configuration/edge-configuration/edge-configuration.component.html
@@ -6,22 +6,22 @@
                 <span flex></span>
             </div>
         </div>
-        <div fxFlex="100" fxLayout="column" fxLayoutAlign="start start" class="sp-blue-border page-container-padding-inner">
-            <mat-grid-list cols="3" rowHeight="100px">
-                <mat-grid-tile
-                        *ngFor="let node of availableEdgeNodes"
-                        [colspan]="1"
-                        [rowspan]="1">
+        <div fxFlex="100" fxLayoutAlign="start start" class="sp-blue-border page-container-padding-inner">
+            <mat-grid-list
+                    [cols]="3" [rowHeight]="200"
+                    [gutterSize]="10" fxFlex="100">
+
+                <mat-grid-tile class="gray" *ngFor="let node of availableEdgeNodes">
                     <mat-card class="example-card">
                         <mat-card-header>
-                            <mat-card-title>{{node.nodeMetadata.nodeName}}</mat-card-title>
+                            <mat-card-title>  {{node.nodeId}}</mat-card-title>
                             <mat-card-subtitle>{{node.nodeMetadata.nodeDescription}}</mat-card-subtitle>
                         </mat-card-header>
                         <mat-card-content>
-                            <h3>{{node.nodeId}}</h3>
+                            <p>
+                            </p>
                         </mat-card-content>
                         <mat-card-actions>
-                            <button mat-button>Edit</button>
                         </mat-card-actions>
                     </mat-card>
                 </mat-grid-tile>
