--- a/ui/src/app/connect/data-marketplace/adapter-description/adapter-description.component.html
+++ b/ui/src/app/connect/data-marketplace/adapter-description/adapter-description.component.html
@@ -51,12 +51,12 @@
             </button>
         </div>
         <div fxFlex="30" fxLayout="row" fxLayoutAlign="end end" *ngIf="adapter.isTemplate" class="delete">
-            <button id="{{ 'share-template-' + adapterLabel }}" matTooltip="Delete Adapter Template" color="secondary" mat-fab (click)="shareAdapterTemplate(adapter); $event.stopPropagation()">
+            <button id="{{ 'share-template-' + adapterLabel }}" matTooltip="Share Adapter Template" color="secondary" mat-fab (click)="shareAdapterTemplate(adapter); $event.stopPropagation()">
                 <i class="material-icons" *ngIf="!deleteInProgress(adapter.couchDbId)">
                     share
                 </i>
             </button>
-            <button id="{{ 'delete-template-' + adapterLabel }}" matTooltip="Share Adapter Template" color="primary" mat-fab (click)="deleteAdapterTemplate(adapter); $event.stopPropagation()" [disabled]="deleteInProgress(adapter.couchDbId)">
+            <button id="{{ 'delete-template-' + adapterLabel }}" matTooltip="Delete Adapter Template" color="primary" mat-fab (click)="deleteAdapterTemplate(adapter); $event.stopPropagation()" [disabled]="deleteInProgress(adapter.couchDbId)">
                 <i class="material-icons" *ngIf="!deleteInProgress(adapter.couchDbId)">
                     delete
                 </i>
