STREAMPIPES-84: Fix links on info page

--- a/ui/src/app/info/about/about.component.html
+++ b/ui/src/app/info/about/about.component.html
@@ -36,7 +36,7 @@
                                 <mat-icon>description</mat-icon>
                             </div>
                             <div fxFlex="95" fxLayoutAlign="start center">
-                                <h5>Find the documentation at <a href="https://docs.streampipes.org">https://docs.streampipes.org</a>
+                                <h5>Find the documentation at <a href="https://streampipes.apache.org/docs/">https://streampipes.apache.org/docs/</a>
                                 </h5>
                             </div>
                         </div>
@@ -48,7 +48,7 @@
                             </div>
                             <div fxFlex="95" fxLayoutAlign="start center">
                                 <h5> Find our website at <a
-                                        href="https://www.streampipes.org">https://streampipes.org</a>
+                                        href="https://streampipes.apache.org">https://streampipes.apache.org</a>
                                 </h5>
                             </div>
                         </div>
@@ -62,7 +62,7 @@
                             <div fxFlex="95" fxLayoutAlign="start center">
                                 <h5> Find the source
                                     code at <a
-                                            href="https://github.com/streampipes">https://github.com/streampipes</a>
+                                            href="https://github.com/apache/incubator-streampipes">https://github.com/apache/incubator-streampipes</a>
                                 </h5>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                             <div fxFlex="95" fxLayoutAlign="start center">
                                 <h5> Find the docker
                                     images at <a
-                                            href="https://hub.docker.com/u/streampipes">https://hub.docker.com/u/streampipes</a>
+                                            href="https://hub.docker.com/u/apachestreampipes">https://hub.docker.com/u/apachestreampipes</a>
                                 </h5>
                             </div>
                         </div>
@@ -110,7 +110,7 @@
                             </div>
                             <div fxFlex="95" fxLayoutAlign="start center">
                                 <h5>Drop us an email if you'd like to give <a
-                                        href="mailto:feedback@streampipes.org">feedback</a>!
+                                        href="mailto:users@streampipes.apache.org">feedback</a>!
                                 </h5>
                             </div>
                         </div>
@@ -124,7 +124,7 @@
                             <div fxFlex="95" fxLayoutAlign="start center">
                                 <h5>If you like
                                     StreamPipes, give us a star at <a
-                                            href="https://github.com/streampipes/streampipes-ce">Github</a>
+                                            href="https://github.com/apache/incubator-streampipes">Github</a>
                                 </h5>
                             </div>
                         </div>
