STREAMPIPES-92: Disable log button until feature is implemented

--- a/ui/src/app/pipelines/components/pipeline-details/pipeline-details.tmpl.html
+++ b/ui/src/app/pipelines/components/pipeline-details/pipeline-details.tmpl.html
@@ -82,13 +82,13 @@
             </md-tooltip>
             </sp-button>
         </span>
-                <span flex flex-order="4" layout="row" layout-align="center center">
-            <sp-button sp-button-icon ng-click="ctrl.PipelineOperationsService.showLogs(pipeline._id)" class="md-icon-button"><i class="material-icons">info</i>
-                <md-tooltip md-direction="top">
-                Show Logs
-            </md-tooltip>
-            </sp-button>
-        </span>
+<!--                <span flex flex-order="4" layout="row" layout-align="center center">-->
+<!--            <sp-button sp-button-icon ng-click="ctrl.PipelineOperationsService.showLogs(pipeline._id)" class="md-icon-button"><i class="material-icons">info</i>-->
+<!--                <md-tooltip md-direction="top">-->
+<!--                Show Logs-->
+<!--            </md-tooltip>-->
+<!--            </sp-button>-->
+<!--        </span>-->
             </div>
         </td>
     </tr>
