--- a/ui/src/app/pipeline-details/components/actions/pipeline-actions.tmpl.html
+++ b/ui/src/app/pipeline-details/components/actions/pipeline-actions.tmpl.html
@@ -66,16 +66,16 @@
                     </md-tooltip>
                 </md-button>
             </div>
-            <div flex="30">
-            <md-button ng-click="ctrl.PipelineOperationsService.showLogs(ctrl.pipeline._id)" class="md-button">
-                <md-icon
-                        md-svg-icon="action:ic_info_24px"
-                        aria-label="Logs" class="md-accent"></md-icon>
-                &nbsp;Logs
-                <md-tooltip md-direction="top">
-                    Show Logs
-                </md-tooltip>
-            </md-button>
+<!--            <div flex="30">-->
+<!--            <md-button ng-click="ctrl.PipelineOperationsService.showLogs(ctrl.pipeline._id)" class="md-button">-->
+<!--                <md-icon-->
+<!--                        md-svg-icon="action:ic_info_24px"-->
+<!--                        aria-label="Logs" class="md-accent"></md-icon>-->
+<!--                &nbsp;Logs-->
+<!--                <md-tooltip md-direction="top">-->
+<!--                    Show Logs-->
+<!--                </md-tooltip>-->
+<!--            </md-button>-->
         </div>
         </div>
     </div>
