Modify node info model in UI

--- a/ui/src/app/editor/dialog/save-pipeline/submitPipelineModal.tmpl.html
+++ b/ui/src/app/editor/dialog/save-pipeline/submitPipelineModal.tmpl.html
@@ -68,9 +68,9 @@
                             <div flex="50" layout="row" layout-align="start center">
                                 <md-select ng-model="pipelineElement.deploymentTargetNodeId" style="margin: 0;">
                                     <md-option
-                                            ng-value = "node.nodeId" ng-repeat="node in
+                                            ng-value = "node.nodeControllerId" ng-repeat="node in
                                             ctrl.deploymentOptions[pipelineElement.appId]">
-                                        <em>{{node.nodeMetadata.nodeDescription}}
+                                        <em>{{node.nodeMetadata.nodeHost}}
                                         </em>
                                     </md-option>
                                 </md-select>
