--- a/ui/src/app/configuration/edge-configuration/edge-configuration.component.html
+++ b/ui/src/app/configuration/edge-configuration/edge-configuration.component.html
@@ -32,7 +32,7 @@
                 <mat-grid-tile class="gray" *ngFor="let node of availableEdgeNodes">
                     <mat-card class="example-card">
                         <mat-card-header>
-                            <mat-card-title>  {{node.nodeId}}</mat-card-title>
+                            <mat-card-title>  {{node.nodeMetadata.nodeHost}}</mat-card-title>
                             <mat-card-subtitle>{{node.nodeMetadata.nodeDescription}}</mat-card-subtitle>
                         </mat-card-header>
                         <mat-card-content>
