--- a/ui/src/app/data-explorer-v2/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widget/data-explorer-dashboard-widget.component.html
@@ -32,14 +32,22 @@
             <!--        <div *ngIf="widget."></div>-->
             <div *ngIf="widgetLoaded" class="h-100">
                 <div *ngIf="widget.widgetType === 'table'" class="h-100 p-0">
-                    <sp-data-explorer-table-widget [gridsterItemComponent]="gridsterItemComponent" [gridsterItem]="item"
-                                                   [widget]="widget" [editMode]="editMode"
-                                                   [widgetConfig]="configuredWidget" class="h-100"></sp-data-explorer-table-widget>
+                    <sp-data-explorer-table-widget
+                            [viewDateRange]="viewDateRange"
+                            [gridsterItem]="item"
+                            [gridsterItemComponent]="gridsterItemComponent"
+                            [editMode]="editMode"
+                            [dataViewDashboardItem]="widget"
+                            [dataExplorerWidget]="configuredWidget" class="h-100"></sp-data-explorer-table-widget>
                 </div>
                 <div *ngIf="widget.widgetType === 'line-chart'" class="h-100 p-0">
-                    <sp-data-explorer-line-chart-widget [gridsterItemComponent]="gridsterItemComponent" [gridsterItem]="item"
-                                                   [widget]="widget" [editMode]="editMode"
-                                                   [widgetConfig]="configuredWidget" class="h-100"></sp-data-explorer-line-chart-widget>
+                    <sp-data-explorer-line-chart-widget
+                            [viewDateRange]="viewDateRange"
+                            [gridsterItem]="item"
+                            [gridsterItemComponent]="gridsterItemComponent"
+                            [editMode]="editMode"
+                            [dataViewDashboardItem]="widget"
+                            [dataExplorerWidget]="configuredWidget" class="h-100"></sp-data-explorer-line-chart-widget>
                 </div>
             </div>
         </div>
