--- a/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
@@ -16,11 +16,36 @@
   ~
   -->
 
-<div class="circleNumber" [ngStyle]="{'background-color': selectedBackgroundColor, 'color': selectedPrimaryTextColor}">
-    <div class="title-panel" *ngIf="hasTitlePanelSettings">
-        {{selectedTitle}}
+<div>
+    <div fxLayout="column" fxLayoutAlign=" stretch">
+        <div *ngIf="enablePaging" fxLayout="row" fxLayoutAlign="space-between center">
+
+            <div *ngIf="dataMode === 'group' && transformedData !== undefined">
+                <mat-form-field style="margin-right: 1px;top: -3px;height: 1px" appearance="outline">
+                    <mat-label>Select Group</mat-label>
+                    <mat-select [ngModel]="this.selectedGroup" (selectionChange)="selectGroup($event.value)">
+                        <mat-option *ngFor="let key of getGroupKeys()" [value]="key" style="background-color: #FFFFFF">
+                            {{key}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+        </div>
+
+
+        <div style="overflow: auto">
+            <table mat-table [dataSource]="dataSource">
+
+                <ng-container *ngFor="let element of displayedColumns" [cdkColumnDef]="element">
+                    <th mat-header-cell *matHeaderCellDef><label style="font-size: large">{{element}}</label></th>
+                    <td mat-cell *matCellDef="let row">{{row[element]}}</td>
+                </ng-container>
+
+                <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+            </table>
+        </div>
+
     </div>
-
-    <sp-old-explorer></sp-old-explorer>
-
 </div>
