STREAMPIPES-87: Password field uses full width

--- a/ui/src/app/connect/static-properties/static-secret-input/static-secret-input.component.html
+++ b/ui/src/app/connect/static-properties/static-secret-input/static-secret-input.component.html
@@ -17,8 +17,8 @@
   -->
 
 <div id="formWrapper" fxFlex="100" fxLayout="column">
-    <div fxFlex fxLayout="row">
-        <form [formGroup]="secretForm">
+    <div fxFlex="100" fxLayout="row">
+        <form [formGroup]="secretForm" fxFlex="100">
             <mat-form-field fxFlex >
                 <input type="password" fxFlex id="{{ 'input-' + staticProperty.label.toLowerCase() }}" matInput [placeholder]="staticProperty.label" [(ngModel)]="staticPropertyUtil.asSecretStaticProperty(staticProperty).value"
                        formControlName="secretStaticProperty" (ngModelChange)="valueChange(staticPropertyUtil.asSecretStaticProperty(staticProperty).value)"
