Colums of table are now selectable

--- a/ui/src/app/data-explorer-v2/components/widgets/line-chart/line-chart-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widgets/line-chart/line-chart-widget.component.html
@@ -16,11 +16,11 @@
   ~
   -->
 
-<div class="circleNumber">
-    <div class="title-panel" *ngIf="hasTitlePanelSettings">
-        {{selectedTitle}}
-    </div>
+<!--<div class="circleNumber">-->
+    <!--<div class="title-panel" *ngIf="hasTitlePanelSettings">-->
+        <!--{{selectedTitle}}-->
+    <!--</div>-->
 
     <sp-old-explorer></sp-old-explorer>
 
-</div>
+<!--</div>-->
