--- a/ui/src/app/data-explorer-v2/components/widget/data-explorer-dashboard-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widget/data-explorer-dashboard-widget.component.html
@@ -18,17 +18,7 @@
 
 <div style="height:100%;">
     <div class="box">
-        <div class="assemblyOptions sp-blue-bg m-0 row header h-40" *ngIf="editMode">
-            <div fxFlex="100" layout="row" fxLayoutAlign="end center">
-                <button mat-button mat-icon-button color="white" (click)="editWidget()">
-                    <i class="material-icons">settings</i>
-                </button>
-                <button mat-button mat-icon-button color="white" (click)="removeWidget()">
-                    <i class="material-icons">clear</i>
-                </button>
-            </div>
-        </div>
-        <div class="h-100 p-0 row content">
+        <div class="h-100 p-0 row content"style="margin-left: 0px;margin-right: 0px;">
             <!--        <div *ngIf="widget."></div>-->
             <div *ngIf="widgetLoaded" class="h-100">
                 <div *ngIf="widget.widgetType === 'table'" class="h-100 p-0">
