--- a/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
+++ b/ui/src/app/data-explorer-v2/components/widgets/table/table-widget.component.html
@@ -16,36 +16,57 @@
   ~
   -->
 
-<div>
-    <div fxLayout="column" fxLayoutAlign=" stretch">
-        <div *ngIf="enablePaging" fxLayout="row" fxLayoutAlign="space-between center">
+<!--<div>-->
 
-            <div *ngIf="dataMode === 'group' && transformedData !== undefined">
-                <mat-form-field style="margin-right: 1px;top: -3px;height: 1px" appearance="outline">
-                    <mat-label>Select Group</mat-label>
-                    <mat-select [ngModel]="this.selectedGroup" (selectionChange)="selectGroup($event.value)">
-                        <mat-option *ngFor="let key of getGroupKeys()" [value]="key" style="background-color: #FFFFFF">
-                            {{key}}
-                        </mat-option>
-                    </mat-select>
-                </mat-form-field>
-            </div>
+<div fxLayout="column" fxLayoutAlign="stretch">
+    <div class="assemblyOptions sp-blue-bg m-0 row header h-40" style="margin-left: 0px;margin-right: 0px;">
+        <div fxFlex="100" layout="row" fxLayoutAlign="end center" style="margin-left: 0px;margin-right: 0px;">
+            <mat-form-field appearance="outline">
+                <mat-label>Select Columns</mat-label>
+                <mat-select [ngModel]="this.selectedColumns" (selectionChange)="setSelectedColumn($event.value)" multiple>
+                    <mat-option *ngFor="let column of availableColumns" [value]="column" style="background-color: #FFFFFF">
+                        {{column}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+            <!--<button mat-button mat-icon-button color="white" (click)="removeWidget()">-->
+            <button mat-button mat-icon-button color="white">
+                <i class="material-icons">clear</i>
+            </button>
         </div>
-
-
-        <div style="overflow: auto">
-            <table mat-table [dataSource]="dataSource">
-
-                <ng-container *ngFor="let element of displayedColumns" [cdkColumnDef]="element">
-                    <th mat-header-cell *matHeaderCellDef><label style="font-size: large">{{element}}</label></th>
-                    <td mat-cell *matCellDef="let row">{{row[element]}}</td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
-            </table>
-        </div>
-
     </div>
+    <!--<div *ngIf="enablePaging" fxLayout="row" fxLayoutAlign="space-between center">-->
+
+    <!--<div *ngIf="dataMode === 'group' && transformedData !== undefined">-->
+    <!--<mat-form-field style="margin-right: 1px;top: -3px;height: 1px" appearance="outline">-->
+    <!--<mat-label>Select Group</mat-label>-->
+    <!--<mat-select [ngModel]="this.selectedGroup" (selectionChange)="selectGroup($event.value)">-->
+    <!--<mat-option *ngFor="let key of getGroupKeys()" [value]="key" style="background-color: #FFFFFF">-->
+    <!--{{key}}-->
+    <!--</mat-option>-->
+    <!--</mat-select>-->
+    <!--</mat-form-field>-->
+    <!--</div>-->
+    <!--</div>-->
+
+
+    <!--<div style="overflow-y: auto; max-height: calc(100% - 40px);">-->
+        <div style=" display: flex;
+  align-items: stretch;
+  height: 100%;
+  min-height: 100px;">
+        <table mat-table [dataSource]="dataSource" matSort>
+
+            <ng-container *ngFor="let element of this.selectedColumns" [cdkColumnDef]="element">
+                <th mat-header-cell *matHeaderCellDef mat-sort-header><label style="font-size: large">{{element}}</label></th>
+                <td mat-cell *matCellDef="let row">{{row[element]}}</td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="this.selectedColumns; sticky: true"></tr>
+            <tr mat-row *matRowDef="let row; columns: selectedColumns;"></tr>
+
+        </table>
+    </div>
+
 </div>
+<!--</div>-->
